--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/KeshavBhadauria-VT/HackVT-2022#readme",
   "dependencies": {
-    "discord.js": "^14.6.0"
+    "discord.js": "^14.6.0",
+    "mongoose": "^6.7.2"
   },
   "devDependencies": {
     "eslint": "^8.27.0"
