get help command

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "MTA0MDc4NDQ0MzYzNzQ5Nzg4Ng.GiGgp6.mfuRItn4y0x8MnuDIIatllXomE1-aXnxnM_r3g",
+	"token": "MTA0MDc4NDQ0MzYzNzQ5Nzg4Ng.GGb75_.ahP9Lo5_RwjYf_KZxNdixIKzV03e5R62b_Uysw",
     "clientId": "1040784443637497886",
     "guildId": "1040781771853267115"
     
